fixing digits on mobile

--- a/packages/bot-web-ui/src/pages/main/style.css
+++ b/packages/bot-web-ui/src/pages/main/style.css
@@ -23,6 +23,11 @@
     top: 58px !important;
 }
 
+.digits__container{
+    position: absolute !important;
+    bottom: 40px !important;
+}
+
 @media (max-width: 720px) {
     .trade-container{
         height:92vh !important;
@@ -39,6 +44,11 @@
 
     .mobile-wrapper{
         z-index: 99 !important;
+    }
+
+    .digits__container{
+        position: relative !important;
+        bottom: 0px !important;
     }
 }
 
